--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
+aiofiles==0.7.0
 fastapi==0.65.1
+google-auth==1.30.1
+google-auth-oauthlib==0.4.4
+google-cloud-firestore==2.1.0
 gspread==3.7.0
 pandas==1.2.4
+python-jose==3.2.0
+requests-oauthlib==1.3.0
+uvicorn==0.13.4
